--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="./tailwind.css" rel="stylesheet">
+  <!-- <link href="./tailwind.css" rel="stylesheet"> -->
+  <script src=""></script>
 </head>
 <body>
   <app-root></app-root>
