--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
+  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
 </head>
+
+
 <body>
   <app-root></app-root>
 </body>
